<resources>
    <string name="app_name">UpStoxAssessment</string>
    <string name="no_data_found">No Data Found</string>
    <string name="ltp">LTP :</string>
    <string name="net_qty">NET QTY :</string>
    <string name="ltp_value_string">₹ %s</string>
    <string name="p_amp_l"><![CDATA[P&L]]></string>
    <string name="profit_loss"><![CDATA[Profit & Loss]]></string>
    <string name="current_value">Current value*</string>
    <string name="today_s_profit_loss"><![CDATA[Today\'s Profit & Loss*]]></string>
    <string name="total_investment">Total Investment*</string>
</resources>