<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="HDFC"
        android:layout_margin="@dimen/sdp_10"
        android:textSize="@dimen/ssp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLtpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ltp"
        android:textColor="@color/gray"
        android:paddingEnd="@dimen/sdp_10"
        app:layout_constraintEnd_toStartOf="@+id/tvLtpValue"
        app:layout_constraintTop_toTopOf="@id/tvLtpValue"
        app:layout_constraintBottom_toBottomOf="@id/tvLtpValue"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLtpValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="119"
        android:layout_margin="@dimen/sdp_10"
        android:textSize="@dimen/ssp_20"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNetQuantityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sdp_20"
        android:paddingHorizontal="@dimen/sdp_10"
        android:text="@string/net_qty"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSymbol"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNetQuantitValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="119"
        android:textSize="@dimen/ssp_20"
        app:layout_constraintBottom_toBottomOf="@+id/tvNetQuantityLabel"
        app:layout_constraintTop_toTopOf="@+id/tvNetQuantityLabel"
        app:layout_constraintStart_toEndOf="@+id/tvNetQuantityLabel"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPAndLLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p_amp_l"
        android:textColor="@color/gray"
        android:paddingEnd="@dimen/sdp_10"
        app:layout_constraintEnd_toStartOf="@+id/tvPAndLValue"
        app:layout_constraintTop_toTopOf="@+id/tvPAndLValue"
        app:layout_constraintBottom_toBottomOf="@id/tvPAndLValue"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPAndLValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="119"
        android:layout_marginTop="@dimen/sdp_20"
        android:layout_marginEnd="@dimen/sdp_10"
        android:textSize="@dimen/ssp_20"
        app:layout_constraintTop_toBottomOf="@+id/tvLtpValue"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/lightGray"
        android:layout_marginTop="@dimen/sdp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPAndLValue"/>



</androidx.constraintlayout.widget.ConstraintLayout>